# Syncdrome

./: .eslintrc.js  .gitignore  LICENSE.md  SECURITY.md  app.js  config.json  electron.js  index.html  package-lock.json  package.json  readme.md  server.js  tsconfig.json  vite.config.js  vite.config.ts  webpack.config.js
.github/: FUNDING.yml
app/: index.ejs  index.js  index.tsx
app/assets/: aboutES.md  help.md  helpEN.md  helpES.md
app/components/: AddBookmarkBadge.tsx  AddBookmarkModal.tsx  AlertMessage.tsx  ChatRtx.tsx  ConfirmDialog.tsx  ExtensionSelect.tsx  config.tsx  footer.js  footer.tsx  navbar.js  navbar.tsx  themeProvider.tsx
app/config/: appLayout.tsx  routes.js  routes.tsx
app/context/: themeContext.tsx
app/helpers/: api.js  api.tsx  chatApi.tsx  utils.tsx
app/interfaces/: interface.tsx
app/models/: Interfaces.tsx
app/styles/: main.css  react-windows-ui.css
app/views/: Navigator.tsx  about.js  about.tsx  (+8 more)
backend/: bookmarks.js  config.json  fileCleaner.js  folderSync.js  process.js  search.js  settings.js  volumeNavigator.js
public/: app.bundle.js  index.html
scripts/: ContentDrive.bat  ContentDriveMedia.bat  lastFiles.bat  syncTofolder.bat
sidecar-app/: server.js
src/: App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bookmarks.rs  config.rs  config_file.rs  file_cleaner.rs  folder_sync.rs  lib.rs  loadConfig.rs  load_config.rs  main.rs  process.rs  search.rs  sqlite.rs  utils.rs  volume_navigator.rs
syncdrome/: package.json
(+51 files in other folders)
