[package]
name = "syncdrome"
version = "2.0.1"
description = "Create a catalog of all files on specified hard drives"
authors = ["Alejandro Aranda"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "syncdrome_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2.0.0-rc.2"
rusqlite = { version = "0.32.1", features = ["bundled"] } 
chrono = "0.4.39"
encoding_rs = "0.8.35"
winapi = { version = "0.3.9", features = ["fileapi", "winnt", "winuser", "shellapi"] }
dirs = "5.0.1"
base64 = "0.22.1"


